Added another link to the home page of the test page

--- a/Test Page/index.html
+++ b/Test Page/index.html
@@ -14,6 +14,7 @@
                 <hr/>
                 <a href="#stay">Stay on this page</a>
                 <a href="javascript:void(0)">A link that does nothing</a>
+                <a href="https://www.example.com/">Plus a link that does something</a>
             </div>
         </center>
     </body>
