Changed a link to have no prefixes

--- a/Test Page/index.html
+++ b/Test Page/index.html
@@ -10,7 +10,7 @@
             <span id="title">All Products</span>
             <div id="main">
                 <a href="./food/index.html">Food</a>
-                <a href="./health/index.html">Health</a>
+                <a href="health/index.html">Health</a>
                 <hr/>
                 <a href="#stay">Stay on this page</a>
                 <a href="javascript:void(0)">A link that does nothing</a>
