Added a few links

--- a/Test Page/index.html
+++ b/Test Page/index.html
@@ -14,7 +14,10 @@
                 <hr/>
                 <a href="#stay">Stay on this page</a>
                 <a href="javascript:void(0)">A link that does nothing</a>
-                <a href="https://www.example.com/">Plus a link that does something</a>
+                <hr/>
+                <a href="https://www.example.com/">Example.com</a>
+                <a href="www.example.com">Example.com Again</a>
+                <a href="//www.example.com">Example.com Again</a>
             </div>
         </center>
     </body>
