Changed some links and updated zip file to match current test page

--- a/Test Page/index.html
+++ b/Test Page/index.html
@@ -15,8 +15,7 @@
                 <a href="#stay">Stay on this page</a>
                 <a href="javascript:void(0)">A link that does nothing</a>
                 <hr/>
-                <a href="https://www.example.com/">Example.com</a>
-                <a href="//www.example.com">Example.com Again</a>
+                <a href="https://www.example.com/">A link to Example.com</a>
             </div>
         </center>
     </body>
